force-app/main/default/objects/Developer_Test_Results__c/Developer_Test_Results__c.object-meta.xml
<CustomObject>
    <description>Developer test result documentation</description>
    <label>Developer Test Results</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Test Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developer Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>