force-app/main/default/objects/Developer_Test_Results__c/fields/Developer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comments__c</fullName>
    <description>Developer comments</description>
    <inlineHelpText>Developer comments</inlineHelpText>
    <label>Developer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>