force-app/main/default/objects/Developer_Test_Results__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Developer End date</description>
    <inlineHelpText>Date developer finishes</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>