force-app/main/default/objects/Developer_Test_Results__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Developer Start date</description>
    <inlineHelpText>Date developer starts testing</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>