force-app/main/default/objects/Developer_Test_Results__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <description>Test case look up</description>
    <inlineHelpText>Test case look up</inlineHelpText>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Developer Test Results</relationshipLabel>
    <relationshipName>Developer_Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>